fixed dark mode

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -25,8 +25,12 @@ body {
 header {
     height: 56px;
     display: flex;
-    align-items: center; justify-content:space-between;
+    align-items: flex-start; justify-content:space-between;
     gap: 14px;
+}
+
+.theme-toggle {
+    margin-left: auto;
 }
 
 header::before {
